# fc-runner

./: .gitignore  CLAUDE.md  Cargo.toml  Dockerfile.runner  README.md  build-rootfs.sh  build-small-rootfs.sh  build-v611-linux.sh  build.rs  config.toml.example  docker-compose.yml  fc-runner.service  install-arch.sh  install.sh  vm-config.json.template
.github/workflows/: build-kernel.yml  check-runner.yml  docker-image.yml  release.yml  test.yml
apparmor/: usr.local.bin.fc-runner  usr.local.bin.firecracker
docs/: README.md  architecture.md  configuration.md  debug-runner-workflow.yml  fork-rust-cache-s3.md  guest-kernel-config.md  host-dependencies.md  setup.md  troubleshooting.md  zigbuild-cross-compilation.md
guest_configs/: fetch-mmds-env.sh  microvm-kernel-ci-aarch64-6.1.config  microvm-kernel-ci-x86_64-6.1.config
src/: agent.rs  api_client.rs  cache_server.rs  cli.rs  config.rs  firecracker.rs  github.rs  image.rs  lib.rs  main.rs  metrics.rs  netlink.rs  orchestrator.rs  pool.rs  server.rs  setup.rs  version.rs  vsock.rs
src/api/: cache_server.rs  mod.rs  server.rs
src/scheduler/: mod.rs  orchestrator.rs  pool.rs
src/vm/: firecracker.rs  mod.rs  netlink.rs  setup.rs  vsock.rs
src/vm/firecracker/: config_builder.rs  injection.rs  jailer.rs  lifecycle.rs  mmds.rs  mod.rs  mount.rs  process.rs
tests/testdata/: multi_repo_config.toml  org_config.toml  pool_config.toml  valid_config.toml
