[package]
name = "fc-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio-util = "0.7"
secrecy = { version = "0.10.3", features = ["serde"] }
axum = "0.8"
prometheus = { version = "0.13", default-features = false }
once_cell = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
hyper = { version = "1", features = ["client", "http1"] }
hyper-util = { version = "0.1", features = ["tokio", "client-legacy", "http1"] }
http-body-util = "0.1"
hyperlocal = "0.9"
tower = "0.5"
qcow2-rs = "0.1"
bootsector = "0.2"
tar = "0.4"
flate2 = "1"
[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2"
nix = { version = "0.31", features = ["mount", "fs", "user", "ioctl", "net"] }
rtnetlink = "0.20"
futures = "0.3"
