[package]
name = "fc-runner"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "stream"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1"
thiserror = "2"
tokio-util = { version = "0.7", features = ["io"] }
secrecy = { version = "0.10.3", features = ["serde"] }
axum = "0.8"
prometheus = { version = "0.13", default-features = false }
once_cell = "1"
jsonwebtoken = "9"
chrono = { version = "0.4", default-features = false, features = ["clock"] }
tower = "0.5"
qcow2-rs = "0.1"
bootsector = "0.2"
tar = "0.4"
flate2 = "1"
clap = { version = "4.5.60", features = ["derive"] }
oci-client = "0.16"
futures-util = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
firecracker-rs-sdk = { version = "0.1", features = ["_rt-tokio"] }
libc = "0.2"
aws-sdk-s3 = "1"
aws-config = "1"
[dev-dependencies]
tempfile = "3"
wiremock = "0.6"

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.31", features = ["mount", "fs", "user", "ioctl", "net", "signal"] }
rtnetlink = "0.20"
futures = "0.3"
tokio-vsock = "0.6"
